| Summary: | ASTERISK-28706: silk 24hHz doesn't show up in 'core show translation' output | ||
| Reporter: | Sean Bright (seanbright) | Labels: | |
| Date Opened: | 2020-01-20 15:56:45.000-0600 | Date Closed: | 2020-01-22 07:46:42.000-0600 |
| Priority: | Trivial | Regression? | Yes |
| Status: | Closed/Complete | Components: | Codecs/codec_silk |
| Versions: | 13.30.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | While loading {{codec_silk}}, the following is sent to the console:
{noformat} == Registered translator 'silktolin' from codec silk to slin, table cost, 900000, computational cost 999999 == Registered translator 'lintosilk' from codec slin to silk, table cost, 600000, computational cost 999999 == Registered translator 'silktolin12' from codec silk to slin, table cost, 900000, computational cost 999999 == Registered translator '12lintosilk' from codec slin to silk, table cost, 600000, computational cost 999999 == Registered translator 'silktolin16' from codec silk to slin, table cost, 900000, computational cost 999999 == Registered translator '16lintosilk' from codec slin to silk, table cost, 600000, computational cost 999999 == Registered translator 'silktolin24' from codec silk to slin, table cost, 900000, computational cost 999999 == Registered translator '24lintosilk' from codec slin to silk, table cost, 600000, computational cost 999999 {noformat} But if you subsequently run {{core show translation}} from the CLI you will not see SILK @ 24kHz: {noformat} *CLI> core show translation Translation times between formats (in microseconds) for one second of data Source Format (Rows) Destination Format (Columns) slin8 slin12 slin16 slin24 slin32 slin44 slin48 slin96 slin192 silk8 silk12 silk16 slin8 - 8000 8000 8000 8000 8000 8000 8000 8000 6000 14000 14000 slin12 8500 - 8000 8000 8000 8000 8000 8000 8000 14500 6000 14000 slin16 8500 8500 - 8000 8000 8000 8000 8000 8000 14500 14500 6000 slin24 8500 8500 8500 - 8000 8000 8000 8000 8000 14500 14500 14500 slin32 8500 8500 8500 8500 - 8000 8000 8000 8000 14500 14500 14500 slin44 8500 8500 8500 8500 8500 - 8000 8000 8000 14500 14500 14500 slin48 8500 8500 8500 8500 8500 8500 - 8000 8000 14500 14500 14500 slin96 8500 8500 8500 8500 8500 8500 8500 - 8000 14500 14500 14500 slin192 8500 8500 8500 8500 8500 8500 8500 8500 - 14500 14500 14500 silk8 9000 17000 17000 17000 17000 17000 17000 17000 17000 - 23000 23000 silk12 17500 9000 17000 17000 17000 17000 17000 17000 17000 23500 - 23000 silk16 17500 17500 9000 17000 17000 17000 17000 17000 17000 23500 23500 - {noformat} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-01-20 15:56:45.723-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Friendly Automation (friendly-automation) 2020-01-22 07:46:44.486-0600 Change 13653 merged by Joshua Colp: translate.c: Fix silk 24kHz truncation in 'core show translation' [https://gerrit.asterisk.org/c/asterisk/+/13653|https://gerrit.asterisk.org/c/asterisk/+/13653] By: Friendly Automation (friendly-automation) 2020-01-22 07:47:00.313-0600 Change 13665 merged by Joshua Colp: translate.c: Fix silk 24kHz truncation in 'core show translation' [https://gerrit.asterisk.org/c/asterisk/+/13665|https://gerrit.asterisk.org/c/asterisk/+/13665] By: Friendly Automation (friendly-automation) 2020-01-22 07:52:04.491-0600 Change 13654 merged by Friendly Automation: translate.c: Fix silk 24kHz truncation in 'core show translation' [https://gerrit.asterisk.org/c/asterisk/+/13654|https://gerrit.asterisk.org/c/asterisk/+/13654] By: Friendly Automation (friendly-automation) 2020-01-22 08:34:54.117-0600 Change 13655 merged by Joshua Colp: translate.c: Fix silk 24kHz truncation in 'core show translation' [https://gerrit.asterisk.org/c/asterisk/+/13655|https://gerrit.asterisk.org/c/asterisk/+/13655] | ||